# Repo-USAC

./: README.md
Arquitectura de Computadoras y Ensambladores 1/: brick_breaker.asm  calculadora.asm  damas.asm  ordenamientos.asm
Base de Datos 2/Practica 1/: DDL.sql  script.sql
Base de Datos 2/Practica 2/: README.md
Base de Datos 2/Practica 3/: Distributor.sql  Publisher Subscriber.sql  up.bat
Estructura de Datos/Practica 1/: ListaCircularSimple.cpp  ListaCircularSimple.h  ListaDoble.cpp  ListaDoble.h  Nodo.h  NodoCircular.h  NodoPila.h  Pila.cpp  Pila.h  main.cpp
Estructura de Datos/Proyecto 1/: jsonFile.json  main.cpp
Introduccion a Programacion de Computadoras 2/Proyecto/: README.md
Lenguajes Formales de Programacion/Proyecto/: AnalizadorLexico.cs  AnalizadorSintatico.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  README.md  Simbolo.cs  Token.cs  [LFP]Proyecto.csproj  [LFP]Proyecto.sln
Manejo e Implementacion de Archivos/Practica 1/: carga_masiva.sql  consultas.sql
Manejo e Implementacion de Archivos/Proyecto 1/: comando.mia  main.go
Manejo e Implementacion de Archivos/Proyecto 2/: .gitignore
Organizacion de Lenguajes y Compiladores 1/Proyecto 1/: ejemplo.js  main.py
Organizacion de Lenguajes y Compiladores 1/Proyecto 1 (C#)/: .gitignore  entrada.er
Organizacion de Lenguajes y Compiladores 1/Proyecto 2/: .gitignore  README.md  docker-compose.yml
Seminario de Sistemas 1/Proyecto 1/: README.md  script.sql  (+1 more)
Sistemas Operativos 1/Proyecto 1/Api Replicas/API_Rust/: .gitignore  Cargo.toml  Dockerfile
Sistemas Operativos 2/: README.md
(+797 files in other folders)
